[tool.poetry]
name = "py-project"
version = "0.1.0"
description = ""
authors = ["vaz.felipe <vaz.felipe@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
numpy = "^2.0.0"
autopep8 = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
